# lt-fm-index

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
benches/: benchmark.rs  counting_bit.rs  profiler.rs  vs_dep.rs
benches/archived_vs_unarchived/: mod.rs
benches/archived_vs_unarchived/build_save_load/: mod.rs
benches/archived_vs_unarchived/casting_vs_including/: mod.rs
benches/archived_vs_unarchived/serializer/: mod.rs
benches/casting_vs_including/: mod.rs
benches/compare_perf/: mod.rs
benches/counting_bit/: mod.rs
benches/locate/: mod.rs
benches/locate_with_raw_index/: mod.rs
benches/memory_vs_disk_mmap/: mod.rs
benches/perf_by_vector_size/: mod.rs
benches/perf_raw_vs_boxed/: mod.rs
benches/random_data/: mod.rs
benches/serialize/: mod.rs  serde_ser.rs  zero_copy_ser.rs
benches/serializer/: mod.rs
benches/sorting/: mod.rs
benches/unarchived_vs_dep/: mod.rs
bridges/v32/: Cargo.toml
bridges/v32/src/: lib.rs
bridges/v64/: Cargo.toml
bridges/v64/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/algorithm/: count_array.rs  mod.rs
core/src/algorithm/bwm/: mod.rs
core/src/algorithm/bwm/blocks/: mod.rs
core/src/algorithm/bwm/blocks/vector/: mod.rs
core/src/algorithm/chr_idx_table/: mod.rs
core/src/algorithm/count_array/: mod.rs
core/src/algorithm/suffix_array/: count_array.rs  mod.rs
core/src/algorithm/suffix_array/burrow_wheeler_transform/: crate_bio.rs  libdivsufsort.rs
core/src/blocks/: mod.rs  vec2.rs  vec3.rs  vec4.rs  vec5.rs  vec6.rs
core/src/core/: mod.rs  text_length.rs
lt-fm-index/: Cargo.toml
lt-fm-index/src/: lib.rs
src/: algorithm.rs  builder.rs  bwt.rs  bwt_occ.rs  composition.rs  config.rs  core.rs  deprecated.rs  encoded.rs  fm_index.rs  fmindex_nn.rs  fmindex_on.rs  generator.rs  io.rs  lib.rs  proto.rs  serialization.rs  structure.rs  tests.rs  text_type.rs  text_types.rs  use_case.rs  utils.rs
src/algorithm/: bwt.rs  count_array.rs  mod.rs
src/algorithm/bwm/: async_serialize.rs  mod.rs  serialize.rs
src/algorithm/chr_idx_table/: async_serialize.rs  mod.rs  serialize.rs
src/algorithm/count_array/: async_serialize.rs  mod.rs  serialize.rs
src/algorithm/features/: async_serialize.rs  debug.rs  locate_from_reverse_raw_index.rs  mod.rs  serialize.rs
src/algorithm/suffix_array/: async_serialize.rs  bwt.rs  count_array.rs  mod.rs  serialize.rs
src/archived/: composition.rs  encoded.rs  mod.rs  structure.rs
src/archived/encoded/: clone.rs  debug.rs  zero_copy.rs
src/archived/structure/: foundation.rs
src/builder/: mod.rs
src/builder/configure/: mod.rs
src/builder_dep/: mod.rs
src/builder_dep/configure/: mod.rs
src/composition/: attachment.rs  feature.rs  mod.rs  serializer.rs
src/composition/feature/: debug.rs  io.rs
src/core/: async_serialize.rs  errors.rs  mod.rs  serialize.rs  text_length.rs
src/deprecated/: io.rs  mod.rs
src/deprecated/archived/: composition.rs  core.rs  encoded.rs  structure.rs
src/deprecated/fmindex_nn/: bwt_nn.rs
src/deprecated/fmindex_on/: bwt_on.rs
src/deprecated/unarchived/: mod.rs  structure.rs
src/encoded/: builder.rs  debug.rs  feature.rs  io.rs  mod.rs  raw.rs
src/encoded/feature/: debug.rs  io.rs
src/errors/: mod.rs
src/fmindex_nn/: bwt_nn.rs
src/fmindex_on/: bwt_on.rs
src/new_algorithm/: count_array.rs  encoding_table.rs  load_from_blob.rs  magic_number.rs  mod.rs
src/new_algorithm/builder/: mod.rs
src/new_algorithm/bwm/: mod.rs
src/new_algorithm/count_array/: mod.rs
src/new_algorithm/encoding_table/: mod.rs
src/new_algorithm/locate/: mod.rs
src/new_algorithm/suffix_array/: mod.rs
src/proto/: bwt.rs  count_array.rs
src/proto/bwt/: bwt_block.rs
src/structure/: bwt.rs  construction.rs  count_array.rs  foundation.rs  suffix_array.rs
src/structure/bwt/: bwt_block.rs
src/structure/construction/: aa_only.rs  aa_with_noise.rs  nc_only.rs  nc_with_noise.rs
src/structure/foundation/: bwt.rs  count_array.rs  suffix_array.rs
src/structure/suffix_array/: bwt_transform.rs
src/structure_dep/: mod.rs
src/structure_dep/commons/: bwt.rs  count_array.rs  mod.rs
src/structures/: bwm.rs  count_array.rs  mod.rs
src/structures/blocks/: mod.rs  vec2.rs  vec3.rs  vec4.rs  vec5.rs
src/structures/bwm/: block.rs  mod.rs
src/structures/construction/: aa_only.rs  aa_with_noise.rs  nc_with_noise.rs
src/structures/encoders/: mod.rs
src/structures/integration/: mod.rs
src/structures/raw/: count_array.rs  mod.rs
src/structures/suffix_array/: mod.rs
src/structures/text_encoders/: mod.rs
src/structures/wrapper/: mod.rs
src/structures_dep/: mod.rs
src/tests/: all_use_cases.rs  archived.rs  example_in_doc.rs  examples.rs  for_readme.rs  large.rs  mod.rs  other_crate.rs  random_text.rs  unarchived.rs
src/text_type/: aa_only.rs  aa_with_noise.rs  nc_only.rs  nc_with_noise.rs
src/unarchived/: config.rs  io.rs  mod.rs  proto.rs  structure.rs  use_case.rs
src/use_case/: aa_only.rs  aa_with_noise.rs  nc_only.rs  nc_with_noise.rs  only_aa.rs  only_nc.rs
src/wrapper/: mod.rs
(+98 files in other folders)
