[package]
name = "lt-fm-index"
version = "0.7.0-alpha.5"
authors = ["baku4 <bahkhun@gmail.com>"]
edition = "2021"
rust-version = "1.57.0"
description = "Fm-index using k-mer lookup table for exact pattern matching"
readme = "README.md"
repository = "https://github.com/baku4/lt-fm-index/"
license = "MIT"
keywords = ["fm-index", "bwt", "pattern_matching", "bio"]
categories = ["science", "algorithms"]

[dependencies]
capwriter = "0.2.0"
byteorder = "1.5"
bytemuck = { version = "1.22", features = [ "derive" ] }
num-traits = "0.2"
libdivsufsort-rs = { version = "0.1.4", optional = true }

# for BWT with "bio" crate
vec_map = "0.8"
bit-set = "0.5"
num-integer = "0.1"
bv = "0.11.0"
fxhash = "0.2"

[dev-dependencies]
crate_fm_index = { package = "fm-index", version = "0.1" }
rand = "0.8.0"
criterion = "0.3.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
fastbwt = ["libdivsufsort-rs"]
