[package]
name = "lt-fm-index-bridge-64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lt-fm-index-core = { path = "../../core", features=["longtext"] }

[features]
fastbwt = ["lt-fm-index-core/fastbwt"]